--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg{
+    background: linear-gradient(rgb(0 0 0 /66%),rgb(0 0 0 /63%)),url(https://wallpaperaccess.com/full/1512223.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+}
